[gd_scene load_steps=17 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://interface/ui/UI.gd" type="Script" id=2]
[ext_resource path="res://interface/fonts/montserrat_extra_bold_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/emotes/emote_faceAngry.png" type="Texture" id=4]
[ext_resource path="res://interface/emotes/emote_faceHappy.png" type="Texture" id=5]
[ext_resource path="res://interface/emotes/emote_faceSad.png" type="Texture" id=6]
[ext_resource path="res://interface/emotes/emote_laugh.png" type="Texture" id=7]
[ext_resource path="res://interface/emotes/Emote.tscn" type="PackedScene" id=8]
[ext_resource path="res://cards/played-card/Table.gd" type="Script" id=9]
[ext_resource path="res://cards/played-card/PlayedCard.tscn" type="PackedScene" id=10]
[ext_resource path="res://cards/deck/Deck.gd" type="Script" id=11]
[ext_resource path="res://cards/cardBack_red5.png" type="Texture" id=12]
[ext_resource path="res://cards/hands/PlayerHand.gd" type="Script" id=13]
[ext_resource path="res://cards/Card.tscn" type="PackedScene" id=14]
[ext_resource path="res://cards/hands/OpponentHand.gd" type="Script" id=15]
[ext_resource path="res://cards/OpponentCard.tscn" type="PackedScene" id=16]

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="UI" type="Control" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Focus", "Mouse" ]

[node name="PlayerName" type="Label" parent="UI" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = 80.0
margin_right = 65.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Player 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OpponentName" type="Label" parent="UI" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -120.0
margin_right = 85.0
margin_bottom = -80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Opponent"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Instruction" type="Label" parent="UI" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -20.0
margin_right = 116.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Player 1 Plays"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="UI" index="3"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -168.0
margin_top = 88.0
margin_right = -117.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Emotes" type="HBoxContainer" parent="UI" index="4"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = -87.0
margin_right = 240.0
margin_bottom = -47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 25
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="AngryButton" type="TextureButton" parent="UI/Emotes" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="HappyButton" type="TextureButton" parent="UI/Emotes" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_right = 89.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="SadButton" type="TextureButton" parent="UI/Emotes" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_right = 146.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="LaughButton" type="TextureButton" parent="UI/Emotes" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 171.0
margin_right = 203.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="OpponentEmote" parent="UI" index="5" instance=ExtResource( 8 )]

visible = false
margin_left = 444.0
margin_top = 41.0
margin_right = 476.0
margin_bottom = 81.0
rect_rotation = -40.7769
OPPONENT = true

[node name="PlayerEmote" parent="UI" index="6" instance=ExtResource( 8 )]

visible = false
margin_left = 795.0
margin_top = 456.0
margin_right = 827.0
margin_bottom = 496.0
rect_rotation = 26.3041

[node name="Table" type="Node2D" parent="." index="1"]

position = Vector2( 640, 360 )
script = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerCardPlayed" parent="Table" index="0" instance=ExtResource( 10 )]

position = Vector2( 250, 0 )

[node name="OpponentCardPlayed" parent="Table" index="1" instance=ExtResource( 10 )]

position = Vector2( -250, 0 )

[node name="Deck" type="Node2D" parent="Table" index="2"]

editor/display_folded = true
position = Vector2( 479.71, 216.909 )
script = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Card" type="Sprite" parent="Table/Deck" index="0"]

texture = ExtResource( 12 )

[node name="Card2" type="Sprite" parent="Table/Deck" index="1"]

position = Vector2( 0, -7 )
texture = ExtResource( 12 )

[node name="Card3" type="Sprite" parent="Table/Deck" index="2"]

position = Vector2( 0, -14 )
texture = ExtResource( 12 )

[node name="Card4" type="Sprite" parent="Table/Deck" index="3"]

position = Vector2( 0, -21 )
texture = ExtResource( 12 )

[node name="Card5" type="Sprite" parent="Table/Deck" index="4"]

position = Vector2( 0, -28 )
texture = ExtResource( 12 )

[node name="Card6" type="Sprite" parent="Table/Deck" index="5"]

position = Vector2( 0, -35 )
texture = ExtResource( 12 )

[node name="PlayerHand" type="Node2D" parent="Table" index="3"]

editor/display_folded = true
position = Vector2( 0, 333.579 )
script = ExtResource( 13 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Cards" type="Node" parent="Table/PlayerHand" index="0"]

[node name="CardA" parent="Table/PlayerHand/Cards" index="0" instance=ExtResource( 14 )]

visible = false
position = Vector2( 590, 693.579 )
rotation = -0.261799
_sections_unfolded = [ "Transform" ]

[node name="CardB" parent="Table/PlayerHand/Cards" index="1" instance=ExtResource( 14 )]

visible = false
position = Vector2( 640, 693.579 )

[node name="CardC" parent="Table/PlayerHand/Cards" index="2" instance=ExtResource( 14 )]

visible = false
position = Vector2( 690, 693.579 )
rotation = 0.261799
_sections_unfolded = [ "Transform" ]

[node name="OpponentHand" type="Node2D" parent="Table" index="4"]

editor/display_folded = true
position = Vector2( 0, -329.309 )
script = ExtResource( 15 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Cards" type="Node" parent="Table/OpponentHand" index="0"]

[node name="OpponentCardA" parent="Table/OpponentHand/Cards" index="0" instance=ExtResource( 16 )]

visible = false
position = Vector2( 590, 30.6907 )
rotation = 0.261799
_sections_unfolded = [ "Transform" ]

[node name="OpponentCardB" parent="Table/OpponentHand/Cards" index="1" instance=ExtResource( 16 )]

visible = false
position = Vector2( 640, 30.6907 )

[node name="OpponentCardC" parent="Table/OpponentHand/Cards" index="2" instance=ExtResource( 16 )]

visible = false
position = Vector2( 690, 30.6907 )
rotation = -0.261799
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="Table" index="5"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="player_scored" from="." to="UI" method="_on_Game_player_scored"]

[connection signal="pressed" from="UI/Emotes/AngryButton" to="UI" method="_on_EmoteButton_pressed" binds= [ "angry" ]]

[connection signal="pressed" from="UI/Emotes/HappyButton" to="UI" method="_on_EmoteButton_pressed" binds= [ "happy" ]]

[connection signal="pressed" from="UI/Emotes/SadButton" to="UI" method="_on_EmoteButton_pressed" binds= [ "sad" ]]

[connection signal="pressed" from="UI/Emotes/LaughButton" to="UI" method="_on_EmoteButton_pressed" binds= [ "laugh" ]]

[connection signal="game_ended" from="Table" to="." method="_on_Table_game_ended"]

[connection signal="players_played" from="Table" to="Table/OpponentCardPlayed" method="_on_Table_players_played"]

[connection signal="players_played" from="Table" to="Table/PlayerCardPlayed" method="_on_Table_players_played"]

[connection signal="players_played" from="Table" to="Table/PlayerHand" method="_on_Table_players_played"]

[connection signal="score_updated" from="Table" to="." method="_on_Table_score_updated"]

[connection signal="turn_changed" from="Table" to="UI" method="_on_Table_turn_changed"]

[connection signal="opponent_played" from="Table/OpponentCardPlayed" to="Table/OpponentHand" method="_on_OpponentCardPlayed_opponent_played"]

[connection signal="deck_emptied" from="Table/Deck" to="Table" method="_on_Deck_deck_emptied"]

[connection signal="card_added" from="Table/PlayerHand" to="Table/OpponentHand" method="_on_PlayerHand_card_added"]

[connection signal="played" from="Table/PlayerHand" to="Table" method="_on_PlayerHand_played"]


